[gd_scene load_steps=75 format=2]

[ext_resource path="res://Sprites/Boss/wizard_idle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/Boss/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Boss/wizard_attack.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Boss/wizard_fly.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Boss/wizard_death.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Enemies/Boss/Boss.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Healthbar/Pixel1_Healthbar_0002_pixel1_border.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Healthbar/Pixel1_Healthbar_0001_pixel1_healthbar.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Enemies/BossProjectil.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 4 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 5 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 5 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=59]
animations = [ {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "attack_1",
"speed": 14.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "attack_2",
"speed": 7.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": false,
"name": "death",
"speed": 13.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": false,
"name": "prepare_attack_2",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ) ],
"loop": true,
"name": "waiting",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=60]
extents = Vector2( 16, 21 )

[sub_resource type="Animation" id=61]
resource_name = "Initiate"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Lifebar:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 279 ), Vector2( 240, 253 ) ]
}

[sub_resource type="Animation" id=62]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=63]
extents = Vector2( 306, 54 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 24, 251, 24, 24 )

[sub_resource type="RectangleShape2D" id=65]
extents = Vector2( 16, 12.5 )

[node name="Boss" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 6 )
bossprojectilscene = ExtResource( 9 )

[node name="Body" type="Position2D" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="Body"]
position = Vector2( 3, 2.25 )
scale = Vector2( 1.05, 1.03125 )
frames = SubResource( 59 )
animation = "idle"
frame = 30
playing = true
flip_h = true

[node name="Shootpos" type="Position2D" parent="Body"]
position = Vector2( 14, 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7, 3 )
shape = SubResource( 60 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Initiate = SubResource( 61 )
anims/TakeDamageEffect = SubResource( 62 )

[node name="TriggerArea" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
shape = SubResource( 63 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Lifebar" type="Control" parent="CanvasLayer"]
anchor_left = 0.575
anchor_top = 1.0
anchor_right = 0.575
anchor_bottom = 1.0
margin_left = -3.05176e-05
margin_top = 10.0
margin_right = -3.05176e-05
margin_bottom = 10.0
rect_scale = Vector2( 2, 1 )

[node name="Bg" type="TextureRect" parent="CanvasLayer/Lifebar"]
margin_left = -46.0
margin_top = 1.0
margin_right = 48.0
margin_bottom = 13.0
texture = ExtResource( 7 )

[node name="LifebarCount" type="TextureProgress" parent="CanvasLayer/Lifebar"]
modulate = Color( 7.52, 6.98, 7.51, 1 )
margin_left = -44.0
margin_top = 2.0
margin_right = 35.0
margin_bottom = 8.0
value = 100.0
texture_progress = ExtResource( 8 )
tint_progress = Color( 0.027451, 0.0352941, 0.262745, 1 )

[node name="Portrait" type="TextureRect" parent="CanvasLayer/Lifebar"]
margin_left = 41.0
margin_top = -6.0
margin_right = 65.0
margin_bottom = 19.0
rect_scale = Vector2( 0.5, 1 )
texture = SubResource( 64 )

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Lifebar/Portrait"]
margin_left = -287.0
margin_top = 5.0
margin_right = -180.0
margin_bottom = 20.0
text = "Da \"Knightmare\""

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 2.0
margin_right = 1.0

[node name="DamagePlayer" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamagePlayer"]
position = Vector2( 7, 2.5 )
shape = SubResource( 65 )

[node name="ContactDamageAgain" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="Body/Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Body/Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="body_entered" from="TriggerArea" to="." method="_on_TriggerArea_body_entered" flags=6]
[connection signal="body_entered" from="DamagePlayer" to="." method="_on_DamagePlayer_body_entered"]
[connection signal="body_exited" from="DamagePlayer" to="." method="_on_DamagePlayer_body_exited"]
[connection signal="timeout" from="ContactDamageAgain" to="." method="_on_ContactDamageAgain_timeout"]
